--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         {{task.text}}
 
                     
-                        <button><i class="fa-solid fa-xmark"></i></button>
+                        <button @click="deleteItem()"><i class="fa-solid fa-xmark"></i></button>
                     </li>
                 </ul>
             </div>
